@@ -8,6 +8,7 @@ CHANGELOG
 * Intervention length field (readonly if geometry is line)
 * Fix apparence bug if no rights to add treks (fixes #713)
 * Fix extremities snapping (fixes #718)
+* Show information desk in trek detail page (fixes #719)
 
 
 0.18 (2013-06-06)
